fix(materialized): fix OR-branch extraction and dual-negation combine bugs
I-1: ConditionExtractor - Stop extracting label/role conditions from OR
branches. Replacing them with EmptyCondition made OR match everything.
Now OR branches are left intact in the field tree; ConditionToCriteria
treats unknown conditions (label/role) as Criteria.empty() (no-op).

I-2: LabelConditionResolver.combine() - Fix dual-negation: NOT A AND NOT B
should yield the union of excluded names with negated=true, not A - B.